--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "husky": "7.0.4",
     "lint-staged": "12.4.1",
     "prettier": "2.6.2",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "2.1.2",
     "typescript": "4.6.4"
   },
   "config": {
