build: add babel/core as a root dependency

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
     "@emotion/cache": "^11.7.1",
