--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": ["@commitlint/config-conventional"]
+	"extends": ["@commitlint/config-conventional"],
+	"type-enum": [
+		2,
+		"always",
+		[
+			"build",
+			"chore",
+			"ci",
+			"docs",
+			"feat",
+			"fix",
+			"perf",
+			"refactor",
+			"revert",
+			"style",
+			"test"
+		]
+	]
 }
