--- a/package.json
+++ b/package.json
@@ -1,54 +1,60 @@
 {
-  "name": "nextjs-with-typescript",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "precommit": "lint-staged",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
-  },
-  "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
-    "commitizen": "^4.2.4",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2",
-    "typescript": "latest"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "next lint"
-    ],
-    "*.{html,js}": [
-      "prettier --write"
-    ]
-  }
+	"name": "nextjs-with-typescript",
+	"version": "1.0.0",
+	"private": true,
+	"engines": {
+		"node": ">=14.0.0",
+		"yarn": ">=1.22.0",
+		"npm": "please-use-yarn"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prepare": "husky install",
+		"precommit": "lint-staged",
+    "prettier": "prettier --write .",
+		"post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+	},
+	"dependencies": {
+		"@babel/core": "^7.0.0",
+		"@commitlint/cli": "^16.2.4",
+		"@commitlint/config-conventional": "^16.2.4",
+		"@emotion/cache": "^11.7.1",
+		"@emotion/react": "^11.9.0",
+		"@emotion/server": "^11.4.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "latest",
+		"@mui/material": "latest",
+		"commitizen": "^4.2.4",
+		"next": "latest",
+		"react": "latest",
+		"react-dom": "latest"
+	},
+	"devDependencies": {
+		"@types/node": "latest",
+		"@types/react": "latest",
+		"cz-conventional-changelog": "3.3.0",
+		"eslint": "latest",
+		"eslint-config-next": "latest",
+		"eslint-config-prettier": "^8.5.0",
+		"husky": "^8.0.1",
+		"lint-staged": "^12.4.1",
+		"prettier": "^2.6.2",
+		"typescript": "latest"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"lint-staged": {
+		"*{js,jsx,ts,tsx}": [
+			"next lint"
+		],
+		"*.{html,js,jsx,ts,tsx}": [
+			"prettier --write"
+		]
+	}
 }
