--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,17 @@
 {
-  "extends": ["plugin:storybook/recommended", "next/core-web-vitals", "eslint:recommended", "next", "prettier"],
-  "overrides": [{
-    "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
-    "rules": {
-      "storybook/hierarchy-separator": "error"
-    }
-  }]
+	"extends": [
+		"plugin:storybook/recommended",
+		"next/core-web-vitals",
+		"eslint:recommended",
+		"next",
+		"prettier"
+	],
+	"overrides": [
+		{
+			"files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
+			"rules": {
+				"storybook/hierarchy-separator": "error"
+			}
+		}
+	]
 }
