--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.5.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "latest",
     "eslint-config-next": "latest",
