feat: added jest for unit testing

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
+		"test": "jest --watch",
+		"test:ci": "jest --ci",
 		"lint": "next lint",
 		"prepare": "husky install",
 		"precommit": "lint-staged",
@@ -41,6 +43,8 @@
 		"@storybook/addon-links": "^6.4.22",
 		"@storybook/react": "^6.4.22",
 		"@storybook/testing-library": "^0.0.11",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.2.0",
 		"@types/node": "latest",
 		"@types/react": "latest",
 		"babel-loader": "^8.2.5",
@@ -50,6 +54,8 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-storybook": "^0.5.11",
 		"husky": "^8.0.1",
+		"jest": "^28.1.0",
+		"jest-environment-jsdom": "^28.1.0",
 		"lint-staged": "^12.4.1",
 		"prettier": "^2.6.2",
 		"typescript": "latest"
