--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"jsxImportSource": "@emotion/react",
-		"incremental": true
+		"incremental": true,
+		"paths": {
+			"@/pages/*": ["./pages/*"]
+		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
