--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,4 @@ jobs:
       - run: yarn install
       - run: yarn lint
       - run: ./.github/workflows/ensure-prettier.sh
+      - run: yarn test:ci
