ci: created  job for running tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,14 @@ jobs:
       - run: yarn install
       - run: yarn lint
       - run: ./.github/workflows/ensure-prettier.sh
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'yarn'
+      - run: yarn install
       - run: yarn test:ci
