--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"engines": {
-		"node": ">=14.0.0",
+		"node": ">=14.0.0 <17.0.0",
 		"yarn": ">=1.22.0",
 		"npm": "please-use-yarn"
 	},
