feat(storybook): add router support for components

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"commitizen": "^4.2.4",
 		"next": "latest",
 		"react": "latest",
-		"react-dom": "latest"
+		"react-dom": "latest",
+		"storybook-addon-next-router": "^3.1.1"
 	},
 	"devDependencies": {
 		"@storybook/addon-actions": "^6.4.22",
