--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
 		"commitizen": "^4.2.4",
 		"next": "latest",
 		"react": "latest",
-		"react-dom": "latest",
-		"storybook-addon-next-router": "^3.1.1"
+		"react-dom": "latest"
 	},
 	"devDependencies": {
 		"@storybook/addon-actions": "^6.4.22",
@@ -59,6 +58,7 @@
 		"jest-environment-jsdom": "^28.1.0",
 		"lint-staged": "^12.4.1",
 		"prettier": "^2.6.2",
+		"storybook-addon-next-router": "^3.1.1",
 		"typescript": "latest"
 	},
 	"config": {
