--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -12,11 +12,12 @@ jobs:
   sitemap:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
       - name: 'Build and Create Sitemap'
+        uses: actions/checkout@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'yarn'
-      - run: yarn build
-      - run: yarn build-sitemap
+        run: |
+            yarn build
+            yarn build-sitemap
