--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -12,12 +12,13 @@ jobs:
   sitemap:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Build and Create Sitemap'
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - name: 'Setup Node'
         uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'yarn'
+      - name: "Build yarn and sitemap"
         run: |
-            yarn build
-            yarn build-sitemap
+          yarn build
+          yarn build-sitemap
