--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@mui/x-data-grid": "^5.12.0",
 		"firebase": "^9.9.0",
 		"next": "12.1.5",
+		"next-auth": "^4.3.4",
 		"react": "latest",
 		"react-dom": "latest",
 		"react-markdown": "^8.0.3"
