--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@emotion/styled": "^11.8.1",
 		"@mui/icons-material": "latest",
 		"@mui/material": "latest",
+		"@mui/x-data-grid": "^5.12.0",
 		"markdown-to-jsx": "^7.1.7",
 		"next": "12.1.5",
 		"react": "latest",
