--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
 		"@mui/icons-material": "latest",
 		"@mui/material": "latest",
 		"@mui/x-data-grid": "^5.12.0",
-		"markdown-to-jsx": "^7.1.7",
 		"next": "12.1.5",
 		"react": "latest",
-		"react-dom": "latest"
+		"react-dom": "latest",
+		"react-markdown": "^8.0.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.4",
