--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@testing-library/react": "^13.2.0",
 		"@types/node": "latest",
 		"@types/react": "latest",
+		"autoprefixer": "^10.4.7",
 		"babel-loader": "^8.2.5",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "3.3.0",
@@ -62,8 +63,10 @@
 		"jest-fetch-mock": "^3.0.3",
 		"lint-staged": "^12.4.1",
 		"next-sitemap": "^2.5.20",
+		"postcss": "^8.4.14",
 		"prettier": "^2.6.2",
 		"storybook-addon-next-router": "^3.1.1",
+		"tailwindcss": "^3.1.2",
 		"typescript": "latest"
 	},
 	"config": {
