--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"build-sitemap": "next-sitemap",
 		"start": "next start",
 		"test": "jest --watch",
-		"test:ci": "jest --ci",
+		"test:ci": "jest --ci --passWithNoTests",
 		"lint": "next lint",
 		"prepare": "husky install",
 		"precommit": "lint-staged",
