--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
+!example.env
 
 # vercel
 .vercel
@@ -44,3 +46,4 @@ yarn-error.log*
 
 # generated
 /storybook-static
+/.firebase
