refactor: alias standard paths for backend and frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,12 @@
 		"jsx": "preserve",
 		"jsxImportSource": "@emotion/react",
 		"incremental": true,
+		"baseUrl": ".",
 		"paths": {
-			"@/pages/*": ["./pages/*"]
+			"@globals/*": ["globals/*"],
+			"@backend/*": ["firebase/*"],
+			"@pages/*": ["pages/*"],
+			"@components/*": ["src/components/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
