refactor: extract path alias `@src`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"paths": {
 			"@globals/*": ["globals/*"],
 			"@backend/*": ["firebase/*"],
+			"@src/*": ["src/*"],
 			"@pages/*": ["pages/*"],
 			"@components/*": ["src/components/*"]
 		}
