--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"next": "12.1.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-markdown": "^8.0.3"
+		"react-markdown": "^8.0.3",
+		"tsconfig-paths-webpack-plugin": "^4.0.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.4",
