refactor(housekeeping): extract paths and vars (#125)
* refactor: alias standard paths for backend and frontend

* refactor: extract data model fields as constants

* refactor: extract `courseFields.IS_DEPRECATED`

* refactor: extract path alias `@src`

* fix(index): correct main title

* fix: resolve storybook build errors with `@` path aliases

* feat(index page): add types to columns for better filtering

Co-authored-by: awpala <apala7@gatech.edu>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,13 @@
 		"jsx": "preserve",
 		"jsxImportSource": "@emotion/react",
 		"incremental": true,
+		"baseUrl": ".",
 		"paths": {
-			"@/pages/*": ["./pages/*"]
+			"@globals/*": ["globals/*"],
+			"@backend/*": ["firebase/*"],
+			"@src/*": ["src/*"],
+			"@pages/*": ["pages/*"],
+			"@components/*": ["src/components/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
