--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"npm": "please-use-yarn"
 	},
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build && next export",
+		"dev": "NODE_OPTIONS='--inspect' next dev",
+		"build": "next build",
 		"build-sitemap": "next-sitemap",
 		"start": "next start",
 		"test": "jest --watch",
@@ -36,6 +36,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-markdown": "^8.0.3",
+		"swr": "^1.3.0",
 		"tsconfig-paths-webpack-plugin": "^4.0.0"
 	},
 	"devDependencies": {
