--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@mui/icons-material": "^5.8.4",
 		"@mui/material": "^5.9.2",
 		"@mui/x-data-grid": "^5.12.0",
+		"@toast-ui/react-editor": "^3.2.0",
 		"firebase": "^9.9.0",
 		"next": "12.1.5",
 		"react": "^18.2.0",
