--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@mui/x-data-grid": "^5.12.0",
 		"@toast-ui/react-editor": "^3.2.0",
 		"firebase": "^9.9.0",
+		"isomorphic-dompurify": "^0.20.0",
 		"next": "12.1.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
