--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
 		"@mui/icons-material": "^5.8.4",
 		"@mui/material": "^5.9.2",
 		"@mui/x-data-grid": "^5.12.0",
+		"@toast-ui/react-editor": "^3.2.0",
 		"firebase": "^9.9.0",
+		"html-to-image": "^1.10.0",
+		"isomorphic-dompurify": "^0.20.0",
 		"next": "12.1.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.34.0",
 		"react-markdown": "^8.0.3",
 		"swr": "^1.3.0",
 		"tsconfig-paths-webpack-plugin": "^4.0.0"
