--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.34.0",
 		"react-markdown": "^8.0.3",
+		"rehype-raw": "^6.1.1",
 		"remark-gfm": "^3.0.1",
 		"string-width": "^5.1.2",
 		"swr": "^1.3.0",
