--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ yarn-error.log*
 # generated
 /storybook-static
 /.firebase
+
+# Firebase emulators logs
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
