--- a/example.env
+++ b/example.env
@@ -8,3 +8,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+
+NEXT_PUBLIC_IS_EMULATOR_MODE= # <true | false>
