--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@mui/x-data-grid": "^5.17.19",
 		"@toast-ui/react-editor": "^3.2.2",
 		"firebase": "^9.15.0",
+		"firebase-functions": "^4.2.0",
 		"html-to-image": "^1.11.4",
 		"isomorphic-dompurify": "^0.26.0",
 		"next": "12.2.5",
