--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "omshub-test-dev"
-  }
+    "default": "omshub-test-dev",
+    "dev": "omshub-test-dev"
+  },
+  "targets": {},
+  "etags": {}
 }
