--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,13 +1,18 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
-		"outDir": "lib",
-		"sourceMap": true,
-		"strict": true,
-		"target": "es2017"
-	},
-	"compileOnSave": true,
-	"include": ["src"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "outDir": "lib",
+    "sourceMap": true,
+    "strict": true,
+		"target": "es2017",
+		"paths": {
+			"@globals/*": ["../globals/*"],
+		}
+  },
+  "compileOnSave": true,
+  "include": [
+    "src"
+  ]
 }
