chore: update `example.env`

--- a/example.env
+++ b/example.env
@@ -10,3 +10,4 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 
 NEXT_PUBLIC_IS_EMULATOR_MODE= # <true | false>
+NEXT_PUBLIC_FIRESTORE_EMULATOR_HOST= # <localhost:8080> -- ref: https://stackoverflow.com/a/66790889
