--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"fb:seed-db": "node ./__seed__/script.js",
 		"fb:seed-db-cloud": "node ./__seed__/script.js SEED_FIREBASE_FIRESTORE_IN_CLOUD",
 		"fb:login": "firebase login",
-		"fb:fns-predeploy": "cd functions && npm run build",
+		"fb:fns-predeploy": "cd functions && npm run build && cp -r lib/*.js* lib/functions/src",
 		"fb:emustart-ui": "firebase emulators:start --import=./__seed__/firebase-seed",
 		"fb:emustart": "yarn fb:fns-predeploy && yarn fb:emustart-ui"
 	},
