--- a/example.env
+++ b/example.env
@@ -1,5 +1,3 @@
-BASE_URL=
-
 # firebase vars
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
@@ -9,5 +7,6 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 
+# firebase emulator suite vars
 NEXT_PUBLIC_IS_EMULATOR_MODE= # <true | false>
 NEXT_PUBLIC_FIRESTORE_EMULATOR_HOST= # <localhost:8080> -- ref: https://stackoverflow.com/a/66790889
