--- a/__seed__/firebase-seed/firebase-export-metadata.json
+++ b/__seed__/firebase-seed/firebase-export-metadata.json
@@ -8,5 +8,9 @@
 	"auth": {
 		"version": "11.21.0",
 		"path": "auth_export"
+	},
+	"storage": {
+		"version": "11.21.0",
+		"path": "storage_export"
 	}
 }
