feat: add firebase emulators and seed (#316)
* feat: add firebase emulators and seed

* fix: add additional config for emulators

* fix: run linter

* chore: make firebase yarn scripts uniform via `fb`

* chore: update README

* fix: fix lint settings to ignore functions

* feat: init cloud functions and config emulator

* chore: revert lint setting

* fix: lint ignore

* fix: resolve build error

* feat: add cloud function config

* chore: remove `functions` from top-level tsconfig

* chore: run prettier

* fix: reconfigure cloud functions as separate proj

* chore: update `example.env`

* fix: lint error

* feat: init firebase storage service & emulator

* chore: add firebase storage to emulator seed data

* feat: wIP cloud functions

* chore: remove `functions` from scope, will address in separate PR to avoid blocking emulators

* chore: remove artifacts from functions setup

* chore: rename command to `fb:emu` to avoid verboseness

* chore: update README with emulator instructions

* chore: remove unused dependency `firebase-functions`

* chore: update seed data and add instructions to `README` for seeding

* chore: fix type in README

* chore: remove unused env var

* chore: add clarifications to README

* chore: run formatter

* chore: remove obsolete instructions from README

* chore: update `yarn` commands in README

* chore: update README

* chore: remove obsolete information from README and fix formats

* chore: update READMEs

* chore: fix header formatting in README

* chore: update README

* chore: fix typo in README

* chore: fix formatting in README

* chore: fix README typo and error

* fix: remove unused service in Firebase seed data

* chore: add additional command to README

* chore: corrected comment

* chore: clarify seeding instructions in READMEs

* chore: fix formatting in README

* fix: update devcontainer to expose emulator ports

* chore: fix formatting

* chore: fix formatting in READMEs

* chore(seed): add test accounts for all service p

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "omshub-website"
-  }
+    "default": "omshub-test-dev",
+    "dev": "omshub-test-dev"
+  },
+  "targets": {},
+  "etags": {}
 }
