--- a/firebase.json
+++ b/firebase.json
@@ -26,8 +26,14 @@
 		"hosting": {
 			"port": 5000
 		},
+		"storage": {
+			"port": 9199
+		},
 		"ui": {
 			"enabled": true
 		}
+	},
+	"storage": {
+		"rules": "storage.rules"
 	}
 }
