--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -7,6 +7,10 @@ on: push
 jobs:
   chromatic-deployment:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [14.x]
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
