--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -32,12 +32,13 @@ jobs:
 
       - name: Install ESLint
         run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+          yarn add eslint@8.10.0
+          yarn add @microsoft/eslint-formatter-sarif@2.1.7
+          yarn install
 
       - name: Run ESLint
         run: npx eslint .
-          --config .eslintrc.js
+          --config .eslintrc.json
           --ext .js,.jsx,.ts,.tsx
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
