--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -22,6 +22,9 @@ jobs:
   eslint:
     name: Run eslint scanning
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+          node-version: [14.x]
     permissions:
       contents: read
       security-events: write
@@ -35,7 +38,7 @@ jobs:
           yarn add eslint@8.10.0
           yarn add @microsoft/eslint-formatter-sarif@2.1.7
           yarn install
-
+        with: ${{ matrix.node-version }}
       - name: Run ESLint
         run: npx eslint .
           --config .eslintrc.json
@@ -43,7 +46,7 @@ jobs:
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
-
+        with: ${{ matrix.node-version }}
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
