--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -7,14 +7,13 @@ on: push
 jobs:
   chromatic-deployment:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install dependencies
         run: yarn
-        with: ${{ matrix.node-version }}
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
