--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -32,13 +32,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install ESLint
         run: |
           yarn add eslint@8.10.0
           yarn add @microsoft/eslint-formatter-sarif@2.1.7
           yarn install
-        with: ${{ matrix.node-version }}
       - name: Run ESLint
         run: npx eslint .
           --config .eslintrc.json
@@ -46,7 +48,6 @@ jobs:
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
-        with: ${{ matrix.node-version }}
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
