--- a/package.json
+++ b/package.json
@@ -1,98 +1,100 @@
 {
-	"name": "nextjs-with-typescript",
-	"version": "1.0.0",
-	"private": true,
-	"engines": {
-		"node": ">=14.0.0 <17.0.0",
-		"yarn": ">=1.22.0",
-		"npm": "please-use-yarn"
-	},
-	"scripts": {
-		"dev": "NODE_OPTIONS='--inspect' next dev",
-		"build": "next build",
-		"build-sitemap": "next-sitemap",
-		"start": "next start",
-		"test": "jest --watch",
-		"test:ci": "jest --ci",
-		"lint": "next lint",
-		"prepare": "husky install",
-		"precommit": "lint-staged",
-		"prettier": "prettier --write .",
-		"fmt": "yarn prettier && yarn lint",
-		"post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
-		"storybook": "start-storybook -s ./public -p 6006",
-		"build-storybook": "build-storybook -s ./public",
-		"fb:seed-db": "node ./__seed__/script.js",
-		"fb:seed-db-cloud": "node ./__seed__/script.js SEED_FIREBASE_FIRESTORE_IN_CLOUD",
-		"fb:login": "firebase login",
-		"fb:emu": "firebase emulators:start --import=./__seed__/firebase-seed",
-		"fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed"
-	},
-	"dependencies": {
-		"@babel/core": "^7.21.0",
-		"@emotion/cache": "^11.10.5",
-		"@emotion/react": "^11.10.6",
-		"@emotion/server": "^11.4.0",
-		"@emotion/styled": "^11.10.5",
-		"@mui/icons-material": "^5.11.11",
-		"@mui/material": "^5.11.5",
-		"@mui/x-data-grid": "^6.5.0",
-		"@toast-ui/react-editor": "^3.2.2",
-		"firebase": "^9.15.0",
-		"html-to-image": "^1.11.11",
-		"isomorphic-dompurify": "^1.6.0",
-		"next": "13.4.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.41.5",
-		"react-markdown": "^8.0.5",
-		"rehype-raw": "^6.1.1",
-		"remark-gfm": "^3.0.1",
-		"string-width": "^6.1.0",
-		"swr": "^2.0.1",
-		"tsconfig-paths-webpack-plugin": "^4.0.0"
-	},
-	"devDependencies": {
-		"@commitlint/cli": "^17.4.4",
-		"@commitlint/config-conventional": "^17.4.2",
-		"@storybook/addon-actions": "^7.0.18",
-		"@storybook/addon-essentials": "^7.0.18",
-		"@storybook/addon-interactions": "^7.0.18",
-		"@storybook/addon-links": "^7.0.18",
-		"@storybook/react": "^7.0.18",
-		"@storybook/testing-library": "^0.1.0",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^14.0.0",
-		"@types/node": "^20.2.5",
-		"@types/react": "^18.0.26",
-		"babel-loader": "^9.1.2",
-		"commitizen": "^4.3.0",
-		"cz-conventional-changelog": "3.3.0",
-		"eslint": "8.10.0",
-		"eslint-config-next": "^13.1.3",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-storybook": "^0.6.11",
-		"husky": "^8.0.3",
-		"jest": "^29.4.3",
-		"jest-environment-jsdom": "^29.3.1",
-		"jest-fetch-mock": "^3.0.3",
-		"lint-staged": "^13.1.0",
-		"next-sitemap": "^4.1.3",
-		"prettier": "^2.8.1",
-		"storybook-addon-next-router": "^4.0.2",
-		"typescript": "^5.0.4"
-	},
-	"config": {
-		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
-		}
-	},
-	"lint-staged": {
-		"{ts,tsx}": [
-			"next lint"
-		],
-		"*": [
-			"prettier --write"
-		]
-	}
+  "name": "nextjs-with-typescript",
+  "version": "1.0.0",
+  "private": true,
+  "engines": {
+    "node": ">=14.0.0 <17.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
+  "scripts": {
+    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "build": "next build",
+    "build-sitemap": "next-sitemap",
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "lint": "next lint",
+    "prepare": "husky install",
+    "precommit": "lint-staged",
+    "prettier": "prettier --write .",
+    "fmt": "yarn prettier && yarn lint",
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "fb:seed-db": "node ./__seed__/script.js",
+    "fb:seed-db-cloud": "node ./__seed__/script.js SEED_FIREBASE_FIRESTORE_IN_CLOUD",
+    "fb:login": "firebase login",
+    "fb:emu": "firebase emulators:start --import=./__seed__/firebase-seed",
+    "fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed"
+  },
+  "dependencies": {
+    "@babel/core": "^7.21.0",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.5",
+    "@mui/x-data-grid": "^6.5.0",
+    "@toast-ui/react-editor": "^3.2.2",
+    "firebase": "^9.15.0",
+    "html-to-image": "^1.11.11",
+    "isomorphic-dompurify": "^1.6.0",
+    "next": "13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
+    "react-markdown": "^8.0.5",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
+    "string-width": "^6.1.0",
+    "swr": "^2.0.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/nextjs": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/testing-library": "^0.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.0.26",
+    "babel-loader": "^9.1.2",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.10.0",
+    "eslint-config-next": "^13.1.3",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-fetch-mock": "^3.0.3",
+    "lint-staged": "^13.1.0",
+    "next-sitemap": "^4.1.3",
+    "prettier": "^2.8.1",
+    "storybook": "^7.0.18",
+    "typescript": "^5.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "{ts,tsx}": [
+      "next lint"
+    ],
+    "*": [
+      "prettier --write"
+    ]
+  }
 }
