--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,3 +3,6 @@
 # Use the bullseye (Debian) image for compatibility with ARM/Apple Silicon.
 ARG VARIANT="16-bullseye"
 FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:0-${VARIANT}
+
+RUN apt-get -y update
+RUN apt-get -y install openjdk-11-jdk
