--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 		"dbaeumer.vscode-eslint",
 		"esbenp.prettier-vscode",
 		"ms-azuretools.vscode-docker",
-		"mhutchie.git-graph"
+		"mhutchie.git-graph",
 	],
 
 	"forwardPorts": [
