chore: ran yarn fmt

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -11,10 +11,10 @@ name: ESLint
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+    branches: ['main']
   schedule:
     - cron: '33 11 * * 4'
 
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          node-version: [14.x]
+        node-version: [14.x]
     permissions:
       contents: read
       security-events: write
