--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,6 @@
 ARG VARIANT="16-bullseye"
 FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:0-${VARIANT}
 
-RUN apt-get -y update
-RUN apt-get -y install openjdk-11-jdk \
+RUN apt-get update && apt-get install -y openjdk-11-jdk \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
