--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,12 @@
 {
-	"endOfLine": "lf",
-	"printWidth": 80,
-	"trailingComma": "es5",
-	"semi": false,
-	"jsxSingleQuote": true,
-	"singleQuote": true,
-	"useTabs": true,
-	"tabWidth": 2,
-	"arrowParens": "always"
+  "endOfLine": "lf",
+  "printWidth": 80,
+  "trailingComma": "all",
+  "semi": true,
+  "jsxSingleQuote": true,
+  "singleQuote": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "arrowParens": "always",
+  "bracketSpacing": true
 }
