fix(`.eslintrc.json`): override rule to `warn` rather than `error`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     {
       "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
       "rules": {
-        "storybook/hierarchy-separator": "error"
+        "storybook/hierarchy-separator": "error",
+        "no-unused-vars": "warn"
       }
     }
   ],
