fix(`.eslintrc.json`): move linting rule to global scope outside of storybook overrides

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,12 +6,14 @@
     "next",
     "prettier"
   ],
+  "rules": {
+    "no-unused-vars": "warn"
+  },
   "overrides": [
     {
       "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
       "rules": {
         "storybook/hierarchy-separator": "error",
-        "no-unused-vars": "warn"
       }
     }
   ],
