--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -18,38 +18,39 @@ on:
   schedule:
     - cron: '33 11 * * 4'
 
-jobs:
-  eslint:
-    name: Run eslint scanning
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
-    permissions:
-      contents: read
-      security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install ESLint
-        run: |
-          yarn add eslint@8.10.0
-          yarn add @microsoft/eslint-formatter-sarif@2.1.7
-          yarn install
-      - name: Run ESLint
-        run: npx eslint .
-          --config .eslintrc.json
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif
-          --output-file eslint-results.sarif
-        continue-on-error: true
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
+# TODO: Fix issue with upload-sarif plugin
+# jobs:
+#   eslint:
+#     name: Run eslint scanning
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         node-version: [14.x]
+#     permissions:
+#       contents: read
+#       security-events: write
+#       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+#       - name: Setup Node
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 16
+#       - name: Install ESLint
+#         run: |
+#           yarn add eslint@8.10.0
+#           yarn add @microsoft/eslint-formatter-sarif@2.1.7
+#           yarn install
+#       - name: Run ESLint
+#         run: npx eslint .
+#           --config .eslintrc.json
+#           --ext .js,.jsx,.ts,.tsx
+#           --format @microsoft/eslint-formatter-sarif
+#           --output-file eslint-results.sarif
+#         continue-on-error: true
+#       - name: Upload analysis results to GitHub
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: eslint-results.sarif
+#           wait-for-processing: true
