fix: resolve ci config issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     {
       "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
       "rules": {
-        "storybook/hierarchy-separator": "error",
+        "storybook/hierarchy-separator": "error"
       }
     }
   ],
