--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -1,12 +1,6 @@
 Name: 'Jest'
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-      - dev
+
+on: [pull_request]
 
 jobs:
   jest-tests:
