fix: invalid field `Name` in config file

--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -1,6 +1,12 @@
-Name: 'Jest'
-
-on: [pull_request]
+name: 'Jest'
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
   jest-tests:
