--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,10 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
-
+  "mounts": [
+    "source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
+  ],
   "settings": {},
-
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
     "dbaeumer.vscode-eslint",
@@ -15,17 +16,23 @@
     "ms-azuretools.vscode-docker",
     "mhutchie.git-graph"
   ],
-
   "forwardPorts": [
     // Application and Storybook
-    3000, 6006,
+    3000,
+    6006,
     // Local Firebase Emulator Suite
-    4000, 4400, 4500, 5000, 5001, 8080, 9099, 9150, 9199
+    4000,
+    4400,
+    4500,
+    5000,
+    5001,
+    8080,
+    9099,
+    9150,
+    9199
   ],
-
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "./.devcontainer/scripts/start.sh",
-
   // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "node"
+  "remoteUser": "root"
 }
