(Fix): Improved dev container speed (#429)
* fix: improved dev container speed

* fix: minor configuration change for dev container and update to script

* chore(`devcontainer.json`): fix linter warnings and update README

---------

Co-authored-by: awpala <apala7@gatech.edu>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,27 +5,38 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
-
-  "settings": {},
-
-  // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
-    "ms-azuretools.vscode-docker",
-    "mhutchie.git-graph"
+  "mounts": [
+    "source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
   ],
-
+  "customizations": {
+    "vscode": {
+      "settings": {},
+      // Add the IDs of extensions you want installed when the container is created.
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "ms-azuretools.vscode-docker",
+        "mhutchie.git-graph"
+      ],
+    }
+  },
   "forwardPorts": [
     // Application and Storybook
-    3000, 6006,
+    3000,
+    6006,
     // Local Firebase Emulator Suite
-    4000, 4400, 4500, 5000, 5001, 8080, 9099, 9150, 9199
+    4000,
+    4400,
+    4500,
+    5000,
+    5001,
+    8080,
+    9099,
+    9150,
+    9199
   ],
-
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "./.devcontainer/scripts/start.sh",
-
-  // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "node"
+  // Change to `"node"` to connect as non-root user instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+  "remoteUser": "root"
 }
