chore: upgrade to nextjs 14 and node 20

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,7 @@
   "customizations": {
     "vscode": {
       "settings": {},
+      "workspaceFolder":"${containerWorkspaceFolder}",
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
         "dbaeumer.vscode-eslint",
