style(everywhere): dark mode style updates

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,10 @@
       ],
     }
   },
+  "containerEnv": {
+    "CHOKIDAR_USEPOLLING":"true",
+    "WATCHPACK_POLLING":"true"
+  },
   "forwardPorts": [
     // Application and Storybook
     3000,
