chore(devcontainer): fix formatting

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,9 +25,7 @@
     "CHOKIDAR_USEPOLLING": "true",
     "WATCHPACK_POLLING": "true"
   },
-  "runArgs": [
-    "--name", "omshub-website-dev"
-  ],
+  "runArgs": ["--name", "omshub-website-dev"],
   "forwardPorts": [
     // Application and Storybook
     3000, 6006,
