chore(example.env): clarify examples for env var `TZ`

--- a/example.env
+++ b/example.env
@@ -10,4 +10,4 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 # firebase emulator suite vars
 NEXT_PUBLIC_IS_EMULATOR_MODE= # <true | false>
 NEXT_PUBLIC_FIRESTORE_EMULATOR_HOST= # <localhost:8080> -- ref: https://stackoverflow.com/a/66790889
-TZ= # <America/Chicago> -- Use same timezone as local to match NodeJS/Emulator to it
+TZ= # <US/Pacific | US/Mountain | US/Central | US/Eastern | etc.> -- Use same timezone as local to match NodeJS/Emulator to it; ref: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
