--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,8 +9,8 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: "Congratulations on your first issue! We will look into it!"
-        pr-message: "Congratulations on your first PR! We will be reviewing it! "
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: 'Congratulations on your first issue! We will look into it!'
+          pr-message: 'Congratulations on your first PR! We will be reviewing it! '
