feat(supabase): init tables, functions, and service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@src/*": ["src/*"],
       "@pages/*": ["pages/*"],
       "@components/*": ["src/components/*"],
-      "@context/*": ["context/*"]
+      "@context/*": ["context/*"],
+      "@services/*": ["services/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
