--- a/example.env
+++ b/example.env
@@ -11,3 +11,7 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 NEXT_PUBLIC_IS_EMULATOR_MODE= # <true | false>
 NEXT_PUBLIC_FIRESTORE_EMULATOR_HOST= # <localhost:8080> -- ref: https://stackoverflow.com/a/66790889
 TZ= # <US/Pacific | US/Mountain | US/Central | US/Eastern | etc.> -- Use same timezone as local to match NodeJS/Emulator to it; ref: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
+
+# supabase
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_SUPABASE_ANON_KEY=
