fix(emu): update local firebase emulators with 2024 changes

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "fb:seed-db": "node ./__seed__/script.js",
     "fb:seed-db-cloud": "node ./__seed__/script.js SEED_FIREBASE_FIRESTORE_IN_CLOUD",
     "fb:login": "firebase login",
-    "fb:emu": "firebase emulators:start --import=./__seed__/firebase-seed --project website",
-    "fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed --project website"
+    "fb:emu": "firebase emulators:start --import=./__seed__/firebase-seed --project demo-website",
+    "fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed --project demo-website"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
