--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.0.14",
-    "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^5.14.5",
-    "@mui/x-data-grid": "^7.14.0",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
+    "@mui/material-nextjs": "^6.4.0",
+    "@mui/system": "^6.4.0",
+    "@mui/x-data-grid": "^7.28.0",
     "@supabase/supabase-js": "^2.47.10",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
@@ -48,7 +50,7 @@
     "firebase": "^11.6.1",
     "html-to-image": "^1.11.11",
     "isomorphic-dompurify": "^2.24.0",
-    "next": "^15.4.5",
+    "next": "15.1.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -112,5 +114,9 @@
     "*": [
       "prettier --write"
     ]
+  },
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
